fixes submit button spacing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,9 +77,11 @@ section {
 input[type="submit"]{
   background-color: #292F33;
   color: #eeeeee;
-  padding:10px 15px;
+  padding:12px 15px;
   cursor: pointer;
   font-size: 20px;
+  font-family: "Titillium Web";
+  font-weight: bold;
 }
 
 .text {
@@ -144,6 +146,7 @@ header h1 {
    background-color: #292F33;
    border-radius: 8px;
    cursor: pointer;
+   
  }
 
  .category-border {
